2006-04-23  Eugene Teo  <eteo@redhat.com>

	* small_demos/ansi_colors.stp: Add an example of using octal
	escape sequences to display all possible ansi colors.

2006-04-21  Eugene Teo  <eteo@redhat.com>

	PR 1326
	* translate.cxx (c_unparser::visit_binary_expression): Handle
	negative left and right shift count.

2006-04-21  Frank Ch. Eigler  <fche@elastic.org>

	PR 953
	* elaborate.h (derived_probe): Add field "name".  Stop passing
	"probe index" to other emit_* calls.
	(emit_probe_context_vars): New member function.
	* elaborate.cxx (derived_probe ctor): Generate unique name.
	* translate.cxx (*): Adapt to index->name.
	(emit_probe): Realize that probe locals only occur at nesting=0.
	* tapsets.cxx (*derived_probe::emit_*): Adapt to index->name.
	(mark_var_expanding_copy_visitor): New class to process $argN.
	(mark_derived_probe ctor): Call it.
	(mark_derived_probe::emit_probe_context_vars): Do it.
	* buildrun.cxx (compile_pass): Add more optional gcc verbosity.
	Add CFLAGS += -freorder-blocks.
	* testsuite/buildok/marker.stp: New test.

2006-04-19  Eugene Teo  <eteo@redhat.com>

	PR 2014
	* parse.cxx (lexer::scan): Added \[0-7]* case to preserve
	octal escape sequences.

2006-04-18  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (install-data-local): Another try.

2006-04-18  Frank Ch. Eigler  <fche@elastic.org>

	PR 2220
	* translate.cxx (visit_statement): Tolerate 0 first argument.
	(visit_for_loop, visit_foreach_loop): Call it thusly for condition
	expression.
	(visit_embededcode, visit_block, visit_null_statement): Don't
	call visit_statement() at all.

2006-04-18  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (install-data-local): Tweak previous fix.
	(install-data-local): 

2006-04-18  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (install-data-local): Rewrite. Set
	ownership and permissions for all files and directories
	under runtime and tapset. Restrict files to source code.

	* Makefile.in: Rebuilt.
	
2006-04-18  Eugene Teo  <eteo@redhat.com>
